[package]
name = "maplibre-style"
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
codegen = "0.2.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[build-dependencies]
codegen = "0.2.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
